# Data-Scrapers

./: .gitignore  .pre-commit-config.yaml  DBT_SETUP_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  data_gov_download_utils.py  data_gov_sg.py  draft.ipynb  final.ipynb  main.py  pyproject.toml  run_dbt.sh  scrape_data_gov_sg.py
.cookiecutter/: README.md  cookiecutter.json
.cookiecutter/{{ cookiecutter.project_name }}/: __main__.py
dbt_project/: README.md  dbt_project.yml  profiles.yml
dbt_project/models/marts/: fct_property_sales.sql
dbt_project/models/staging/data_gov_sg/: schema.yml  sources.yml  stg_cea_property_transactions.sql
